# example

linux/cmake_hello_world/: CMakeLists.txt  main.cpp
linux/wxwidgets_hello_world/: CMakeLists.txt  main.cpp  note.txt
